fix: spacing adjustment

--- a/client/src/pages/RegistrationPage/RegistrationPage.module.css
+++ b/client/src/pages/RegistrationPage/RegistrationPage.module.css
@@ -125,7 +125,7 @@
     .locationInput {
         grid-column: 1 / 3;
         grid-row: 11 / 12;
-        width: 142px;
+        width: 138px;
         height: 40px;
         margin: 5px 0;
         border-radius: 5px;
@@ -149,13 +149,13 @@
     .genderInput {
         grid-column: 3 / 5;
         grid-row: 11 / 12;
-        width: 150px;
-        height: 47px;
+        width: 147px;
+        height: 47.5px;
         margin-top: 4px;
         border: 1px solid #96807A;
         border-radius: 5px;
         background-color: #F7EDE1;
-        margin-left: 6px;
+        margin-left: 9px;
     }
     
     .skintypeLabel {
